--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -26,6 +26,7 @@ jobs:
             arch: x86_64
             needs_deps: true
             packages: meson
+            build_flags: -Dunit_tests=disabled
             max_warnings: 0
 
           - name: GCC 11
@@ -33,7 +34,7 @@ jobs:
             arch: x86_64
             needs_deps: true
             packages: gcc@11
-            build_flags: --native-file=.github/meson/native-gcc-11.ini
+            build_flags: -Dunit_tests=disabled --native-file=.github/meson/native-gcc-11.ini
             max_warnings: 0
 
           - name: Clang, +tests
@@ -47,7 +48,7 @@ jobs:
             host: macos-latest
             arch: x86_64
             needs_deps: true
-            build_flags: -Denable_debugger=normal
+            build_flags: -Dunit_tests=disabled -Denable_debugger=normal
             max_warnings: 0
 
           - name: Clang
@@ -55,6 +56,7 @@ jobs:
             arch: arm64
             needs_deps: false
             packages: meson
+            build_flags: -Dunit_tests=disabled
             max_warnings: 0
 
     steps:
