Use vcpkg from upstream because GitHub's version is broken
The version bundled in the GitHub VM contains bug:

https://github.com/microsoft/vcpkg/issues/21431

Which is causing these errors:

  3>C:\Program Files\Microsoft Visual
  Studio\2022\Enterprise\MSBuild\Current\Bin\amd64\Microsoft.Common.CurrentVersion.targets(4812,5):
  error MSB3030: Could not copy the file "targetBinaryFilePath" because it was not found.
  [D:\a\dosbox-staging\dosbox-staging\src\libs\zmbv\zmbv.vcxproj]

  3>Done Building Project "D:\a\dosbox-staging\dosbox-staging\src\libs\zmbv\zmbv.vcxproj" (Rebuild
  target(s)) -- FAILED.

  2>Done Building Project "D:\a\dosbox-staging\dosbox-staging\vs\dosbox.vcxproj.metaproj" (Rebuild
target(s)) -- F AILED.

  1>Done Building Project "D:\a\dosbox-staging\dosbox-staging\vs\dosbox.sln" (dosbox:Rebuild
  target(s)) -- FAILED.

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -51,7 +51,11 @@ jobs:
         shell: pwsh
         run: |
           rm -R c:\vcpkg
-          mv c:\vcpkg-bak c:\vcpkg
+          c:
+          cd \
+          git clone --depth 1 https://github.com/Microsoft/vcpkg.git
+          cd vcpkg
+          .\bootstrap-vcpkg.bat
           vcpkg install --triplet ${{ matrix.conf.arch }}-windows libpng sdl2 sdl2-net libmt32emu opusfile fluidsynth pdcurses gtest
           if (-not $?) { throw "vcpkg failed to install library dependencies" }
           rm -R c:\vcpkg\buildtrees
