--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -167,9 +167,15 @@ jobs:
 
       - name: Package
         shell: bash
-        env:
-          VC_REDIST_PATH: 'C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Redist/MSVC'
         run: |
+          # Construct VC_REDIST_DIR
+          readonly VC_REDIST_BASE="C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Redist/MSVC"
+          readonly VC_REDIST_VERSION="14.30.30704"
+          readonly VC_REDIST_CRT_VERSION="Microsoft.VC143.CRT"
+          export VC_REDIST_DIR="$VC_REDIST_BASE/$VC_REDIST_VERSION/${{ matrix.conf.arch }}/$VC_REDIST_CRT_VERSION"
+          find "$VC_REDIST_DIR" -maxdepth 3 -type d
+
+          # Package
           ./scripts/create-package.sh \
             -p msvc \
             vs/${{ matrix.conf.vs-release-dirname }}/Release \
