--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -241,62 +241,20 @@ jobs:
 
       - name: Download binaries
         uses: actions/download-artifact@v2
-          
+      
       - name: Package
         run: |
-          set -x
-
-          # Print shared object dependencies
-          otool -L dosbox-arm64/dosbox
-          python3 scripts/verify-macos-dylibs.py dosbox-arm64/dosbox
+          ./scripts/create-package.sh \
+            -p macos \
+            -c "$GITHUB_SHA" \
+            -b "${GITHUB_REF#refs/heads/}" \
+            -r "$GITHUB_REPOSITORY" \
+            -v "${{ env.VERSION }}" \
+            "$(pwd)" \
+            "$(pwd)"
           
-          # Create universal binary from both architectures
-          mkdir dosbox-universal
-          lipo dosbox-x86_64/dosbox dosbox-arm64/dosbox -create -output dosbox-universal/dosbox
-
-          # Generate icon
-          make -C contrib/icons/ dosbox-staging.icns
-
-          dst=dist/dosbox-staging.app/Contents
-
-          # Prepare content
-          install -d "$dst/MacOS/"
-          install -d "$dst/Resources/"
-          install -d "$dst/SharedSupport/"
-                    
-          install        "dosbox-universal/dosbox"           "$dst/MacOS/"
-          install -m 644 "contrib/macos/Info.plist.template" "$dst/Info.plist"
-          install -m 644 "contrib/macos/PkgInfo"             "$dst/PkgInfo"
-          install -m 644 "contrib/icons/dosbox-staging.icns" "$dst/Resources/"
-          install -m 644 "docs/README.template"              "$dst/SharedSupport/README"
-          install -m 644 "COPYING"                           "$dst/SharedSupport/COPYING"
-          install -m 644 "README"                            "$dst/SharedSupport/manual.txt"
-          install -m 644 "docs/README.video"                 "$dst/SharedSupport/video.txt"
-
-          # Fill README template file
-          sed -i -e "s|%VERSION%|${{ env.VERSION }}|"           "$dst/Info.plist"
-          sed -i -e "s|%GIT_COMMIT%|$GITHUB_SHA|"               "$dst/SharedSupport/README"
-          sed -i -e "s|%GIT_BRANCH%|${GITHUB_REF#refs/heads/}|" "$dst/SharedSupport/README"
-          sed -i -e "s|%GITHUB_REPO%|$GITHUB_REPOSITORY|"       "$dst/SharedSupport/README"
-
-          # Prepare translation files
-          #
-          # Note:
-          #   We conciously drop the dialect postfix because no dialects are available.
-          #   (US was the default DOS dialect and therefore is the default for 'en').
-          #   There users get the generic translation and benefit from simpler filenames.
-          #   Dialect translations will be added if/when they're available.
-          #
-          dst_lng="$dst/Resources/translations/"
-          install -d "$dst_lng"
-          install -m 644 contrib/translations/de/de_DE.lng       "$dst_lng/de.lng"
-          install -m 644 contrib/translations/en/en_US.lng       "$dst_lng/en.lng"
-          install -m 644 contrib/translations/es/es_ES.lng       "$dst_lng/es.lng"
-          install -m 644 contrib/translations/fr/fr_FR.lng       "$dst_lng/fr.lng"
-          install -m 644 contrib/translations/it/it_IT.lng       "$dst_lng/it.lng"
-          install -m 644 contrib/translations/pl/pl_PL.CP437.lng "$dst_lng/pl.cp437.lng"
-          install -m 644 contrib/translations/pl/pl_PL.lng       "$dst_lng/pl.lng"
-          install -m 644 contrib/translations/ru/ru_RU.lng       "$dst_lng/ru.lng"
+      - name: Create dmg
+        run: |
           ln -s /Applications dist/
 
           codesign -s "-" dist/dosbox-staging.app --force --deep -v
