--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -223,6 +223,12 @@ jobs:
           git fetch --prune --unshallow
           export VERSION=$(git describe --abbrev=5)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
+      
+      - name: Inject package names
+        run: |
+          set -x
+          echo "PKG_RELEASE=dosbox-staging-windows-msys2-${{ matrix.conf.arch }}-${{ env.VERSION }}" >> $GITHUB_ENV
+          echo "PKG_DEBUGGER=dosbox-staging-windows-msys2-debugger-${{ matrix.conf.arch }}-${{ env.VERSION }}" >> $GITHUB_ENV
            
       - name: Setup release build
         run: meson setup $BUILD_FLAGS $BUILD_RELEASE_DIR
@@ -235,72 +241,25 @@ jobs:
       
       - name: Build w/ debugger
         run: ninja -C $BUILD_DEBUGGER_DIR
-      
-      - name: Stage binaries
-        run: |
-          set -x
-          for bin_dir in $BUILD_RELEASE_DIR $BUILD_DEBUGGER_DIR; do
-            mkdir -p stage/${bin_dir}
-            cp ${bin_dir}/dosbox.exe stage/${bin_dir}/
-            ntldd -R stage/${bin_dir}/dosbox.exe \
-              | sed -e 's/^[[:blank:]]*//g' \
-              | cut -d ' ' -f 3 \
-              | grep -E -i '(mingw|clang)(32|64)' \
-              | sed -e 's|\\|/|g' \
-              | xargs cp --target-directory=stage/${bin_dir}/
-          done
-
-      - name: Strip binaries
-        run: |
-          for bin_dir in $BUILD_RELEASE_DIR $BUILD_DEBUGGER_DIR; do
-            strip stage/${bin_dir}/dosbox.exe
-          done
             
-      - name: Setup common package dir
+      - name: Package
         run: |
-          set -x
-          mkdir -p dest/doc
-          cp COPYING               dest/COPYING.txt
-          cp docs/README.template  dest/README.txt
-          cp docs/README.video     dest/doc/video.txt
-          cp README                dest/doc/manual.txt
-
-          # Prepare translation files
-          #
-          # Note:
-          #   We conciously drop the dialect postfix because no dialects are available.
-          #   (US was the default DOS dialect and therefore is the default for 'en').
-          #   There users get the generic translation and benefit from simpler filenames.
-          #   Dialect translations will be added if/when they're available.
-          #
-          mkdir -p dest/translations
-          cp contrib/translations/de/de_DE.lng       dest/translations/de.lng
-          cp contrib/translations/en/en_US.lng       dest/translations/en.lng
-          cp contrib/translations/es/es_ES.lng       dest/translations/es.lng
-          cp contrib/translations/fr/fr_FR.lng       dest/translations/fr.lng
-          cp contrib/translations/it/it_IT.lng       dest/translations/it.lng
-          cp contrib/translations/pl/pl_PL.CP437.lng dest/translations/pl.cp437.lng
-          cp contrib/translations/pl/pl_PL.lng       dest/translations/pl.lng
-          cp contrib/translations/ru/ru_RU.lng       dest/translations/ru.lng
-
-          # Fill README template file
-          sed -i "s|%GIT_COMMIT%|$GITHUB_SHA|"               dest/README.txt
-          sed -i "s|%GIT_BRANCH%|${GITHUB_REF#refs/heads/}|" dest/README.txt
-          sed -i "s|%GITHUB_REPO%|$GITHUB_REPOSITORY|"       dest/README.txt
-
-          # Create dir for zipping
-      
-      - name: Package binaries
-        run: |
-          for bin_dir in $BUILD_RELEASE_DIR $BUILD_DEBUGGER_DIR; do
-            cp -r dest/. stage/${bin_dir}/
+          declare -A builds=( ["$BUILD_RELEASE_DIR"]="$PKG_RELEASE" ["$BUILD_DEBUGGER_DIR"]="$PKG_DEBUGGER")
+          for b in "${!builds[@]}"; do
+            ./scripts/create-package.sh \
+              -p msys2 \
+              -c "$GITHUB_SHA" \
+              -b "${GITHUB_REF#refs/heads/}" \
+              -r "$GITHUB_REPOSITORY" \
+              "$b" \
+              "${builds[$b]}"
           done
       
       - name: Windows Defender AV Scan
         shell: powershell
         run: |
           $ErrorActionPreference = 'Stop'
-          $dosboxDirs = "${{ github.workspace }}\stage\${{ env.BUILD_RELEASE_DIR }}", "${{ github.workspace }}\stage\${{ env.BUILD_DEBUGGER_DIR }}"
+          $dosboxDirs = "${{ github.workspace }}\${{ env.PKG_RELEASE }}", "${{ github.workspace }}\${{ env.PKG_DEBUGGER }}"
           foreach ($dosboxDir in $dosboxDirs)
           {
             & 'C:\Program Files\Windows Defender\MpCmdRun.exe' -Scan -ScanType 3 -DisableRemediation -File $dosboxDir
@@ -313,14 +272,14 @@ jobs:
       - name: Upload release package
         uses: actions/upload-artifact@v2
         with:
-          name: dosbox-staging-windows-msys2-${{ matrix.conf.arch }}-${{ env.VERSION }}
-          path: stage/${{ env.BUILD_RELEASE_DIR }}
+          name: ${{ env.PKG_RELEASE }}
+          path: ${{ env.PKG_RELEASE }}
 
       - name: Upload debugger package
         uses: actions/upload-artifact@v2
         with:
-          name: dosbox-staging-windows-msys2-debugger-${{ matrix.conf.arch }}-${{ env.VERSION }}
-          path: stage/${{ env.BUILD_DEBUGGER_DIR }}
+          name: ${{ env.PKG_DEBUGGER }}
+          path: ${{ env.PKG_DEBUGGER }}
 
   # This job exists only to publish an artifact with version info when building
   # from main branch, so snapshot build version will be visible on:
