--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -155,58 +155,19 @@ jobs:
           cd vs
           MSBuild -m dosbox.sln -t:dosbox:Rebuild -p:Configuration=Release -p:Platform=${{ matrix.conf.arch }}
 
-      - name:  Package
+      - name: Package
         shell: bash
         env:
-          VC_REDIST_PATH: 'C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Redist/MSVC'
+          # This should probably be in the matrix somewhere
+          VC_REDIST_DIR: C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Redist/MSVC/14.29.30133/${{ matrix.conf.arch }}/Microsoft.VC142.CRT
         run: |
-          set -x
-
-          # Prepare content
-          readonly RELEASE_DIR=${{ matrix.conf.vs-release-dirname }}/Release
-          ls "vs/$RELEASE_DIR"
-          mkdir -p dest/doc
-          cp vs/$RELEASE_DIR/dosbox.exe           dest/
-          cp COPYING                              dest/COPYING.txt
-          cp docs/README.template                 dest/README.txt
-          cp docs/README.video                    dest/doc/video.txt
-          cp docs/vc_redist.txt                   dest/doc/vc_redist.txt
-          cp README                               dest/doc/manual.txt
-          cp vs/$RELEASE_DIR/*.dll                dest/
-          cp src/libs/zmbv/$RELEASE_DIR/*.dll     dest/
-
-          # Prepare translation files
-          #
-          # Note:
-          #   We conciously drop the dialect postfix because no dialects are available.
-          #   (US was the default DOS dialect and therefore is the default for 'en').
-          #   There users get the generic translation and benefit from simpler filenames.
-          #   Dialect translations will be added if/when they're available.
-          #
-          mkdir -p dest/translations
-          cp contrib/translations/de/de_DE.lng       dest/translations/de.lng
-          cp contrib/translations/en/en_US.lng       dest/translations/en.lng
-          cp contrib/translations/es/es_ES.lng       dest/translations/es.lng
-          cp contrib/translations/fr/fr_FR.lng       dest/translations/fr.lng
-          cp contrib/translations/it/it_IT.lng       dest/translations/it.lng
-          cp contrib/translations/pl/pl_PL.CP437.lng dest/translations/pl.cp437.lng
-          cp contrib/translations/pl/pl_PL.lng       dest/translations/pl.lng
-          cp contrib/translations/ru/ru_RU.lng       dest/translations/ru.lng
-
-          # List version of available Visual C++ Redistributable files
-          ls -l "$VC_REDIST_PATH"
-
-          # Include the necessary dlls from one of available versions
-          readonly VC_REDIST_VERSION="14.29.30133"
-          readonly VC_REDIST_DIR="$VC_REDIST_PATH/$VC_REDIST_VERSION/${{ matrix.conf.arch }}/Microsoft.VC142.CRT"
-          cp "$VC_REDIST_DIR/msvcp140.dll"       dest/
-          cp "$VC_REDIST_DIR/vcruntime140.dll"   dest/
-          cp "$VC_REDIST_DIR/vcruntime140_1.dll" dest/ || true # might be missing, depending on arch
-
-          # Fill README template file
-          sed -i "s|%GIT_COMMIT%|$GITHUB_SHA|"               dest/README.txt
-          sed -i "s|%GIT_BRANCH%|${GITHUB_REF#refs/heads/}|" dest/README.txt
-          sed -i "s|%GITHUB_REPO%|$GITHUB_REPOSITORY|"       dest/README.txt
+          ./scripts/create-package.sh \
+            -p msvc \
+            -c "$GITHUB_SHA" \
+            -b "${GITHUB_REF#refs/heads/}" \
+            -r "$GITHUB_REPOSITORY" \
+            vs/${{ matrix.conf.vs-release-dirname }}/Release \
+            "dest"
 
       - name:  Enable the debugger in config.h
         shell: bash
