--- a/.github/workflows/windows-meson-msys2.yml
+++ b/.github/workflows/windows-meson-msys2.yml
@@ -224,59 +224,49 @@ jobs:
           export VERSION=$(git describe --abbrev=5)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
       
-      - name: Inject package names
+      - name: Inject package name
         run: |
           set -x
           echo "PKG_RELEASE=dosbox-staging-windows-msys2-${{ matrix.conf.arch }}-${{ env.VERSION }}" >> $GITHUB_ENV
-          echo "PKG_DEBUGGER=dosbox-staging-windows-msys2-debugger-${{ matrix.conf.arch }}-${{ env.VERSION }}" >> $GITHUB_ENV
            
       - name: Setup release build
         run: meson setup $BUILD_FLAGS $BUILD_RELEASE_DIR
 
-      - name: Setup release w/ debugger build
+      - name: Setup debugger build
         run: meson setup $BUILD_FLAGS -Denable_debugger=normal $BUILD_DEBUGGER_DIR
       
-      - name: Build
+      - name: Build release
         run: ninja -C $BUILD_RELEASE_DIR
       
-      - name: Build w/ debugger
+      - name: Build debugger
         run: ninja -C $BUILD_DEBUGGER_DIR
             
       - name: Package
         run: |
-          declare -A builds=( ["$BUILD_RELEASE_DIR"]="$PKG_RELEASE" ["$BUILD_DEBUGGER_DIR"]="$PKG_DEBUGGER")
-          for b in "${!builds[@]}"; do
-            ./scripts/create-package.sh \
-              -p msys2 \
-              "$b" \
-              "${builds[$b]}"
-          done
+          # Package the debug build to bring in required dependencies such as ncurses
+          ./scripts/create-package.sh \
+            -p msys2 \
+            "$BUILD_DEBUGGER_DIR" \
+            "$PKG_RELEASE"
+          mv "${PKG_RELEASE}/dosbox.exe" "${PKG_RELEASE}/dosbox_with_debugger.exe"
+          install -DT "${BUILD_RELEASE_DIR}/dosbox.exe" "${PKG_RELEASE}/dosbox.exe"
       
       - name: Windows Defender AV Scan
         shell: powershell
         run: |
           $ErrorActionPreference = 'Stop'
-          $dosboxDirs = "${{ github.workspace }}\${{ env.PKG_RELEASE }}", "${{ github.workspace }}\${{ env.PKG_DEBUGGER }}"
-          foreach ($dosboxDir in $dosboxDirs)
-          {
-            & 'C:\Program Files\Windows Defender\MpCmdRun.exe' -Scan -ScanType 3 -DisableRemediation -File $dosboxDir
-            if( $LASTEXITCODE -ne 0 ) {
-                Get-Content -Path $env:TEMP\MpCmdRun.log
-                Throw "Exit $LASTEXITCODE : Windows Defender found an issue"
-            }
+          $dosboxDir = "${{ github.workspace }}\${{ env.PKG_RELEASE }}"
+          & 'C:\Program Files\Windows Defender\MpCmdRun.exe' -Scan -ScanType 3 -DisableRemediation -File $dosboxDir
+          if( $LASTEXITCODE -ne 0 ) {
+              Get-Content -Path $env:TEMP\MpCmdRun.log
+              Throw "Exit $LASTEXITCODE : Windows Defender found an issue"
           }
 
-      - name: Upload release package
+      - name: Upload package
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.PKG_RELEASE }}
           path: ${{ env.PKG_RELEASE }}
-
-      - name: Upload debugger package
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{ env.PKG_DEBUGGER }}
-          path: ${{ env.PKG_DEBUGGER }}
 
   # This job exists only to publish an artifact with version info when building
   # from main branch, so snapshot build version will be visible on:
