--- a/meson.build
+++ b/meson.build
@@ -68,6 +68,8 @@ conf_data.set(os_family_name, 1)
 
 conf_data.set10('C_MODEM', get_option('use_sdl2_net'))
 conf_data.set10('C_IPX', get_option('use_sdl2_net'))
+conf_data.set10('C_SLIRP', get_option('use_slirp'))
+conf_data.set10('C_NE2000', get_option('use_slirp'))
 conf_data.set10('C_OPENGL', get_option('use_opengl'))
 conf_data.set10('C_FLUIDSYNTH', get_option('use_fluidsynth'))
 conf_data.set10('C_MT32EMU', get_option('use_mt32emu'))
@@ -257,8 +259,8 @@ if get_option('use_png')
 endif
 
 if get_option('use_slirp')
-  conf_data.set('C_SLIRP', 1)
-  slirp_dep = dependency('slirp', static : ('slirp' in static_libs_list))
+  slirp_dep = dependency('slirp', static : ('slirp' in static_libs_list),
+                         not_found_message : msg.format('use_slirp'))
 endif
 
 if get_option('enable_debugger') != 'none'
