--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -33,13 +33,13 @@ jobs:
 
           - name: GCC, Ubuntu 18.04
             os: ubuntu-18.04
-            build_flags: -Dunit_tests=disabled -Duse_fluidsynth=false
+            build_flags: -Dunit_tests=disabled
             max_warnings: 0
 
           - name: GCC 7, Ubuntu 18.04
             os: ubuntu-18.04
             packages: g++-7
-            build_flags: --native-file=.github/meson/native-gcc-7.ini --wrap-mode=nofallback -Dunit_tests=disabled -Duse_fluidsynth=false -Duse_mt32emu=false -Duse_slirp=false
+            build_flags: -Dunit_tests=disabled --native-file=.github/meson/native-gcc-7.ini
             max_warnings: 0
 
           - name: GCC, +tests
@@ -69,7 +69,16 @@ jobs:
 
           - name: GCC, minimum build
             os: ubuntu-20.04
-            build_flags: --wrap-mode=nofallback -Dunit_tests=disabled -Duse_fluidsynth=false -Duse_sdl2_net=false -Duse_opengl=false -Duse_fluidsynth=false -Duse_mt32emu=false -Duse_png=false -Duse_alsa=false -Duse_slirp=false
+            build_flags: >-
+              --wrap-mode=nofallback
+              -Dunit_tests=disabled
+              -Duse_alsa=false
+              -Duse_fluidsynth=false
+              -Duse_mt32emu=false
+              -Duse_opengl=false
+              -Duse_png=false
+              -Duse_sdl2_net=false
+              -Duse_slirp=false
             min_dependencies: true
             max_warnings: 0
 
@@ -194,8 +203,6 @@ jobs:
             -Ddefault_library=static \
             -Db_asneeded=true \
             -Db_lto=true \
-            -Dtry_static_libs=fluidsynth,mt32emu,png,slirp \
-            -Dfluidsynth:enable-floats=true \
             -Dfluidsynth:try-static-deps=true \
             build
 
