--- a/src/misc/meson.build
+++ b/src/misc/meson.build
@@ -14,6 +14,7 @@ libmisc_sources = [
 libmisc = static_library('misc', libmisc_sources,
                          include_directories : incdir,
                          dependencies : [
+                           corefoundation_dep,
                            sdl2_dep,
                            stdcppfs_dep,
                            libloguru_dep,
