Use conservative FluidSynth build defaults
This commit uses 32-bit float and avoids
internally threading FluidSynth voices (and
using openMP), as 64-bit samples and
voice-threading and voice-threading are simply
unecessary for performance and the precision
demands of 24 parallel mixed voices of General
MIDI.

DOSBox Staging already threads FluidSynth as as
whole, and performance is acceptable on
decade-old hardware such as a core2duo and Pi2.

(Context: 64-bit and OpenMP /are/ useful when
mixing demands climb into the hundreds or
thousands of parallel voices, but this isn't
General MIDI, which limited to 24 voices).

--- a/meson.build
+++ b/meson.build
@@ -1,27 +1,31 @@
 project('dosbox-staging', 'c', 'cpp',
-        version : '0.78.0',
-        license : 'GPL-2.0-or-later',
-        meson_version : '>= 0.54.2',
-        default_options : [
-	  'cpp_std=c++17',
-	  'warning_level=3',
-	  'b_ndebug=if-release',
-	  'b_staticpic=false',
-	  'fluidsynth:warning_level=0',
-          'fluidsynth:try-static-deps=true',
-          'glib:glib_assert=false',
-          'glib:glib_checks=false',
-          'glib:glib_debug=disabled',
-          'glib:libelf=disabled',
-          'glib:libmount=disabled',
-          'glib:nls=disabled',
-          'glib:tests=false',
-          'glib:warning_level=0',
-          'glib:xattr=false',
-          'gtest:warning_level=0',
-	  'mt32emu:warning_level=0',
-	  'slirp:warning_level=0',
-	])
+  version : '0.78.0',
+  license : 'GPL-2.0-or-later',
+  meson_version : '>= 0.54.2',
+  default_options : [
+    'cpp_std=c++17',
+    'warning_level=3',
+    'b_ndebug=if-release',
+    'b_staticpic=false',
+    'fluidsynth:enable-floats=true',
+    'fluidsynth:openmp=disabled',
+    'fluidsynth:enable-threads=false',
+    'fluidsynth:try-static-deps=false',
+    'fluidsynth:warning_level=0',
+    'glib:glib_assert=false',
+    'glib:glib_checks=false',
+    'glib:glib_debug=disabled',
+    'glib:libelf=disabled',
+    'glib:libmount=disabled',
+    'glib:nls=disabled',
+    'glib:tests=false',
+    'glib:warning_level=0',
+    'glib:xattr=false',
+    'gtest:warning_level=0',
+    'mt32emu:warning_level=0',
+    'slirp:warning_level=0',
+  ]
+)
 
 # After increasing the minimum-required meson version, make the following
 # improvements:
