fix stupid errors

--- a/src/custom/src/Makefile
+++ b/src/custom/src/Makefile
@@ -251,7 +251,7 @@ INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
 LDFLAGS = 
 LIBOBJS = 
-LIBS = -lasound -lm -ldl -lpthread -lSDL2 -lGL
+LIBS = -lasound -lm -ldl -lpthread -lSDL2 -lpng -lz -lSDL2_net -lopusfile   -lGL
 LTLIBOBJS = 
 MAKEINFO = ${SHELL} /home/user/dosbox-staging/missing makeinfo
 MKDIR_P = /usr/bin/mkdir -p
@@ -260,8 +260,8 @@ NCURSESW_LIBS =
 NCURSES_CFLAGS = 
 NCURSES_LIBS = 
 OBJEXT = o
-OPUSFILE_CFLAGS = 
-OPUSFILE_LIBS = 
+OPUSFILE_CFLAGS = -I/usr/include/opus  
+OPUSFILE_LIBS = -lopusfile  
 PACKAGE = dosbox
 PACKAGE_BUGREPORT = 
 PACKAGE_NAME = dosbox
@@ -335,7 +335,7 @@ target_alias =
 top_build_prefix = ../../../
 top_builddir = ../../..
 top_srcdir = ../../..
-AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -DDOSBOX -I../ -mno-ms-bitfields -Wno-multichar -Wno-address-of-packed-member -I/include/ncurses  -I. -L.  -ggdb3 -lSDL -std=c++11 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-strict-aliasing -Wno-narrowing -Wno-unused-function -Wno-comment -fpermissive -finline-limit=50 -ftime-report -DM2CM2CDEBUG # -v -Q
+AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -DDOSBOX -I../ -mno-ms-bitfields -Wno-multichar -Wno-address-of-packed-member -I/include/ncurses  -I. -L.  -ggdb3 -lSDL -std=c++11 -Wno-unused-variable -Wno-unused-but-set-variable -Wno-strict-aliasing -Wno-narrowing -Wno-unused-function -Wno-comment -fpermissive -finline-limit=50 -ftime-report -DM2CDEBUG # -v -Q
 SUBDIRS = 
 noinst_LIBRARIES = libsrc.a
 libsrc_a_SOURCES = _data.cpp  _data.h init.cpp init.h  dnprgdrv.cpp dnprgdrv.h dnprgdrv_default_seg.cpp dnprgdrv_seg000.cpp dnprgdrv_seg002.cpp dnprgdrv_seg003.cpp dnprgdrv_seg004.cpp
