fix build script

--- a/src/custom/src_dune/meson.build
+++ b/src/custom/src_dune/meson.build
@@ -11,7 +11,7 @@ libsrc_sources = files([
 
 libsrc = static_library('src', libsrc_sources,
                         include_directories : incdir,
-                        dependencies : [
+                        dependencies : [ libloguru_dep
                                        ])
 
 libsrc_dep = declare_dependency(link_with : libsrc)
