update snake to separate functions

--- a/src/custom/src_snake/meson.build
+++ b/src/custom/src_snake/meson.build
@@ -1,5 +1,5 @@
 libsrc_sources = files([
-  'snake.cpp',
+  'snake.cpp','snake_default_seg.cpp','snake_seg001.cpp',
   'init.cpp',
   '_data.cpp',
 ])
